--- a/level-1/index.html
+++ b/level-1/index.html
@@ -44,7 +44,9 @@
 
                     <header class="content-mid-header"></header>
 
-                    <div class="content"></div>
+                    <div class="content">
+                        <p>And it came to pass that the Guardian did go forth and smite the forces of darkness with the Blade of Awesomeness which he did'st obtain during his questing in the Land of Morkath.</p>
+                    </div>
 
                 </section>
 
